[gd_scene load_steps=9 format=3 uid="uid://n3gfvu4nc8sm"]

[ext_resource type="FontFile" uid="uid://bqxwnqqlj5tfi" path="res://IBMPlexMono-Regular.ttf" id="1_01yje"]
[ext_resource type="Script" path="res://Game.gd" id="1_vs7j2"]
[ext_resource type="Script" path="res://Input.gd" id="2_jfvxp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfy72"]
bg_color = Color(0.114897, 0.114897, 0.114897, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyyni"]
bg_color = Color(0.262745, 0.262745, 0.262745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lsw82"]
bg_color = Color(0.360784, 0.360784, 0.360784, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xfj2n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8sw52"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vs7j2")

[node name="BG" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sfy72")

[node name="MarginContainer" type="MarginContainer" parent="BG"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="BG/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameInfo" type="PanelContainer" parent="BG/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_gyyni")

[node name="ScrollContainer" type="ScrollContainer" parent="BG/MarginContainer/Rows/GameInfo"]
layout_mode = 2

[node name="HistoryRows" type="VBoxContainer" parent="BG/MarginContainer/Rows/GameInfo/ScrollContainer"]
layout_mode = 2

[node name="InputArea" type="PanelContainer" parent="BG/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lsw82")

[node name="HBoxContainer" type="HBoxContainer" parent="BG/MarginContainer/Rows/InputArea"]
layout_mode = 2

[node name="Caret" type="Label" parent="BG/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_01yje")
text = " > "

[node name="Input" type="LineEdit" parent="BG/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_01yje")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_xfj2n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8sw52")
placeholder_text = "Enter a command"
max_length = 60
script = ExtResource("2_jfvxp")

[connection signal="text_submitted" from="BG/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="BG/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="BG/MarginContainer/Rows/InputArea/HBoxContainer/Input" method="_on_text_submitted"]
